commenced training on 64 dims with gpu

--- a/notebooks/experiment_review.ipynb
+++ b/notebooks/experiment_review.ipynb
@@ -18,9 +18,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "# project imports\n",
     "import env\n",
@@ -58,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,6 +102,7 @@
     "vae_toilet_nightstand_monitor = '/home/jcworkma/jack/3d-form/src/../models/voxel_vaegan1/modelnet10/2019-03-27_05-27-14'\n",
     "vae_full_index = '/home/jcworkma/jack/3d-form/src/../models/voxel_vaegan1/modelnet10/2019-03-28_15-09-00'\n",
     "vae_modelnet10 = '/home/jcworkma/jack/3d-form/models/voxel_vae_modelnet10_200epochs_1'\n",
+    "vae_modelnet10_64 = '/home/jcworkma/jack/3d-form/src/../models/voxel_vaegan1/modelnet10/2019-04-09_05-32-25'\n",
     "\n",
     "### vaegan\n",
     "vaegan_sofa13 = '/home/jcworkma/jack/3d-form/src/../models/voxel_vaegan1/modelnet10/2019-03-16_13-37-24/model_epoch-13.ckpt'\n",
@@ -118,29 +128,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/jcworkma/jack/3d-form/.3d-form/lib/python3.5/site-packages/tensorflow/python/client/session.py:1702: UserWarning: An interactive session is already active. This can cause out-of-memory errors in some cases. You must explicitly call `InteractiveSession.close()` to release resources held by the other session(s).\n",
-      "  warnings.warn('An interactive session is already active. This can '\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO:tensorflow:Restoring parameters from /home/jcworkma/jack/3d-form/models/voxel_vae_modelnet10_200epochs_1/model_epoch-174.ckpt\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:tensorflow:Restoring parameters from /home/jcworkma/jack/3d-form/models/voxel_vae_modelnet10_200epochs_1/model_epoch-174.ckpt\n"
+     "ename": "AttributeError",
+     "evalue": "module 'tensorflow.initializers' has no attribute 'glorot_uniform'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-21-7ce7019bb4e6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[0;31m# restore the model from ckpt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 25\u001b[0;31m \u001b[0mvaegan\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mVoxelVaegan\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minitFromCfg\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel_cfg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     26\u001b[0m \u001b[0mvaegan\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrestore\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel_ckpt\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/jack/3d-form/src/models/voxel_vaegan.py\u001b[0m in \u001b[0;36minitFromCfg\u001b[0;34m(cls, cfg)\u001b[0m\n\u001b[1;32m    191\u001b[0m                      \u001b[0mdis_noise\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcfg_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'dis_noise'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    192\u001b[0m                      \u001b[0madaptive_lr\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcfg_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'adaptive_lr'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 193\u001b[0;31m                      gpu=cfg_model.get('gpu', False))\n\u001b[0m\u001b[1;32m    194\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mvaegan\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    195\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/jack/3d-form/src/models/voxel_vaegan.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, input_dim, latent_dim, keep_prob, verbose, no_gan, kl_div_loss_weight, recon_loss_weight, ll_weight, dec_weight, debug, ckpt_dir, tb_dir, train_vae_cadence, train_gan_cadence, dis_noise, adaptive_lr, gpu)\u001b[0m\n\u001b[1;32m     83\u001b[0m             \u001b[0muse_gpu\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     84\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 85\u001b[0;31m             \u001b[0muse_cpu\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     86\u001b[0m         \u001b[0;32mwith\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdevice\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mDEVICE_NAME\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     87\u001b[0m             \u001b[0;31m# network and training params\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/jack/3d-form/src/models/voxel_vaegan.py\u001b[0m in \u001b[0;36muse_cpu\u001b[0;34m()\u001b[0m\n\u001b[1;32m     28\u001b[0m     \u001b[0mDEVICE_NAME\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"/cpu:0\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     29\u001b[0m     \u001b[0;32mglobal\u001b[0m \u001b[0mGLOROT_INITIALIZER\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 30\u001b[0;31m     \u001b[0mGLOROT_INITIALIZER\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minitializers\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mglorot_uniform\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     31\u001b[0m     \u001b[0;32mglobal\u001b[0m \u001b[0mREDUCE_MAX\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     32\u001b[0m     \u001b[0mREDUCE_MAX\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreduce_max\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: module 'tensorflow.initializers' has no attribute 'glorot_uniform'"
      ]
     }
    ],
@@ -160,10 +162,13 @@
     "tf.reset_default_graph()\n",
     "\n",
     "# model to use for reconstruction\n",
-    "model_root = os.path.join(PROJECT_ROOT, vae_modelnet10)\n",
+    "model_root = os.path.join(PROJECT_ROOT, vae_modelnet10_64)\n",
     "model_cfg = read_json_data(os.path.join(model_root, 'cfg.json'))\n",
-    "model_ckpt = os.path.join(model_root, 'model_epoch-174.ckpt')\n",
+    "model_ckpt = os.path.join(model_root, 'model_epoch-49.ckpt')\n",
     "#model_ckpt = os.path.join(model_root, 'model_epoch-_end.ckpt')\n",
+    "\n",
+    "# move the cfg from gpu to cpu to avoid clashing with any models currently training on gpu\n",
+    "model_cfg['model']['gpu'] = False\n",
     "\n",
     "# restore the model from ckpt\n",
     "vaegan = VoxelVaegan.initFromCfg(model_cfg)\n",
@@ -1635,28 +1640,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2019-04-02 01:51:23,452 - INFO - voxel_vaegan: Memory Use (GB): 1.3209877014160156\r\n",
-      "2019-04-02 01:51:23,507 - INFO - voxel_vaegan: Enc Loss = 45.39, KL Divergence = 156.03, Reconstruction Loss = 0.00, ll_loss = -999.00, dis_Loss = -999.00, dec_Loss = -999.00, Elapsed time: 6402.33 mins\r\n",
-      "2019-04-02 01:51:23,872 - INFO - voxel_vaegan: Model saved in path: /home/jcworkma/jack/3d-form/src/../models/voxel_vaegan1/modelnet10/2019-03-28_15-09-00/model_epoch-_end.ckpt\r\n",
-      "2019-04-02 01:51:23,877 - INFO - voxel_vaegan: Metrics saved in path: /home/jcworkma/jack/3d-form/src/../models/voxel_vaegan1/modelnet10/2019-03-28_15-09-00/metrics.json\r\n",
-      "2019-04-02 01:51:23,878 - INFO - train_vaegan: Saved final checkpoint\r\n",
-      "2019-04-02 01:51:23,879 - INFO - train_vaegan: Did not save experiment metrics\r\n",
-      "2019-04-02 01:51:23,879 - INFO - train_vaegan: Done train_vaegan.py main\r\n",
-      "2019-04-02 01:51:23,884 - DEBUG - captured_function: Finished after 4 days, 10:42:22.\r\n",
-      "2019-04-02 01:51:23,885 - INFO - run: Completed after 4 days, 10:42:22\r\n",
-      "2019-04-02 01:51:24,887 - DEBUG - run: Stopping Heartbeat\r\n"
+      "2019-04-10 10:57:25,911 - DEBUG - voxel_vaegan: Epoch: 66 / 200, Batch: 1193 (38208 / 58144), Elapsed time: 1764.94 mins\r\n",
+      "2019-04-10 10:57:26,695 - INFO - voxel_vaegan: Enc Loss = 51.02, KL Divergence = 161.84, Reconstruction Loss = 0.00, ll_loss = -999.00, dis_Loss = -999.00, dec_Loss = -999.00, Elapsed time: 1764.96 mins\r\n",
+      "2019-04-10 10:57:26,697 - INFO - voxel_vaegan: Memory Use (GB): 2.485187530517578\r\n",
+      "2019-04-10 10:57:26,768 - DEBUG - voxel_vaegan: Epoch: 66 / 200, Batch: 1194 (38240 / 58144), Elapsed time: 1764.96 mins\r\n",
+      "2019-04-10 10:57:27,551 - INFO - voxel_vaegan: Enc Loss = 53.84, KL Divergence = 156.47, Reconstruction Loss = 0.00, ll_loss = -999.00, dis_Loss = -999.00, dec_Loss = -999.00, Elapsed time: 1764.97 mins\r\n",
+      "2019-04-10 10:57:27,554 - INFO - voxel_vaegan: Memory Use (GB): 2.485187530517578\r\n",
+      "2019-04-10 10:57:27,634 - DEBUG - voxel_vaegan: Epoch: 66 / 200, Batch: 1195 (38272 / 58144), Elapsed time: 1764.97 mins\r\n",
+      "2019-04-10 10:57:28,419 - INFO - voxel_vaegan: Enc Loss = 47.90, KL Divergence = 156.58, Reconstruction Loss = 0.00, ll_loss = -999.00, dis_Loss = -999.00, dec_Loss = -999.00, Elapsed time: 1764.99 mins\r\n",
+      "2019-04-10 10:57:28,421 - INFO - voxel_vaegan: Memory Use (GB): 2.485187530517578\r\n",
+      "2019-04-10 10:57:28,499 - DEBUG - voxel_vaegan: Epoch: 66 / 200, Batch: 1196 (38304 / 58144), Elapsed time: 1764.99 mins\r\n"
      ]
     }
    ],
    "source": [
-    "!tail /home/jcworkma/jack/3d-form/src/logs/2019-03-28_15-09__root.log"
+    "!tail /home/jcworkma/jack/3d-form/src/logs/2019-04-09_05-32__root.log"
    ]
   },
   {
